# rust_messenger

./: Cargo.toml  README.md
src/: app.rs  client.rs  common.rs  connection_status.rs  exp.rs  message.rs  server.rs  server_mod.rs  stream_utils.rs  test.rs  ui.rs  ui_client.rs
src/app/: app.rs
src/enums/: app_type.rs  connection_status.rs  message.rs  mod.rs
src/network/: mod.rs  network_utils.rs  test.rs
src_cli/: client.rs  common.rs  server.rs
