[package]
name = "rust_messenger"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = "0.26"
eframe = "*"
egui = "*"
futures = "0.3"
chrono = "*"
serde_json = "*"
u4 = "*"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "*", default-features = true, features = ["jpeg", "png"] }
fast_image_resize = "4.2.1"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

# [[bin]]
# name = "test"
# path = "src/test.rs"
